Fix delete modal buttons not responding in edit mode

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ body, #sidebar, #basemap-switcher {
   background: rgba(0, 0, 0, 0.8);
   justify-content: center;
   align-items: center;
-  z-index: 2000;
+  z-index: 2147483605;
   color: #fff;
 }
 
@@ -475,7 +475,7 @@ body, #sidebar, #basemap-switcher {
   background: rgba(0, 0, 0, 0.8);
   justify-content: center;
   align-items: center;
-  z-index: 2000;
+  z-index: 2147483605;
   color: #fff;
 }
 #layerDeleteModalContent {
